--- a/raid/index.html
+++ b/raid/index.html
@@ -11,7 +11,7 @@
   <!-- Styles -->
   <link rel="stylesheet" href="/styles.css" />
   <style>
-    /* Simple modal styling */
+    /* Modal */
     .modal {
       display: none;
       position: fixed;
@@ -30,11 +30,23 @@
       max-width: 400px;
       color: var(--ink);
     }
-    .modal-content h2 {
-      margin-bottom: 1rem;
+    .modal-content h2 { margin-bottom: 1rem; }
+
+    /* Locked Pro Buttons */
+    .pro-only {
+      opacity: 0.6;
+      cursor: not-allowed;
+      position: relative;
     }
-    .modal-content .button {
-      margin-top: 1rem;
+    .pro-only::after {
+      content: "🔒 Pro";
+      position: absolute;
+      top: 50%; left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 0.8rem;
+      font-weight: bold;
+      color: var(--muted);
+      pointer-events: none;
     }
   </style>
 </head>
