--- a/pricing.html
+++ b/pricing.html
@@ -65,7 +65,11 @@
           <li>✔ Ronnie’s Confidence Score</li>
           <li>✔ Priority support</li>
         </ul>
-        <a href="#" class="button primary">Start Free Trial</a>
+        <!-- 🔗 LemonSqueezy checkout link -->
+        <a href="https://systemnflow.lemonsqueezy.com/buy/858f651e-edd3-473b-9adc-4d48169d5b97" 
+           class="button primary" target="_blank" rel="noopener">
+          Start Free Trial
+        </a>
       </div>
 
       <!-- Enterprise -->
