--- a/enterprise.html
+++ b/enterprise.html
@@ -58,7 +58,7 @@
     >
       <!-- Hidden settings -->
       <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_next" value="https://systemnflow.com/thank-you.html">
+      <input type="hidden" name="_next" value="https://systemnflow.com/enterprise-thank-you.html">
       <input type="hidden" name="Lead Type" value="Enterprise">
 
       <!-- Company Info -->
