--- a/raid/index.html
+++ b/raid/index.html
@@ -63,13 +63,12 @@
   </style>
 </head>
 
-
 <body>
   <!-- 🔹 Header -->
   <header class="site-header">
     <div class="container">
       <a href="/" class="brand-wrap" aria-label="System & Flow homepage">
-        <img src="/assets/img/logo.png" alt="System & Flow logo" />
+        <img src="assets/img/logo.png" alt="System & Flow logo" />
         <span class="brand">System & Flow</span>
       </a>
       <nav>
@@ -143,7 +142,7 @@
   <footer class="footer-min">
     <div class="container footer-container">
       <div class="foot-left">
-        <img class="logo-icon" src="/assets/img/logo.png" alt="System & Flow logo icon" />
+        <img class="logo-icon" src="assets/img/logo.png" alt="System & Flow logo icon" />
         <span class="brand">System & Flow</span>
         <span class="divider">•</span>
         <span class="tagline">Smarter tools. Faster PMs.</span>
