--- a/raid/index.html
+++ b/raid/index.html
@@ -14,52 +14,23 @@
   <meta property="og:image" content="https://systemnflow.com/assets/img/snf_logo.png" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <!-- Favicons -->
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png" />
-  <link rel="manifest" href="assets/img/site.webmanifest" />
+  <!-- Favicons (root-absolute paths so they work from /raid/) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png" />
+  <link rel="manifest" href="/assets/img/site.webmanifest" />
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="styles.css" />
+  <!-- Styles (root-absolute so /raid/ can find it) -->
+  <link rel="stylesheet" href="/styles.css" />
+
   <style>
     /* Modal */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1000;
-      left: 0; top: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.7);
-      justify-content: center;
-      align-items: center;
-    }
-    .modal-content {
-      background: var(--panel);
-      padding: 2rem;
-      border-radius: 10px;
-      text-align: center;
-      max-width: 400px;
-      color: var(--ink);
-    }
-    .modal-content h2 { margin-bottom: 1rem; }
-
+    .modal{display:none;position:fixed;z-index:1000;left:0;top:0;width:100%;height:100%;background:rgba(0,0,0,.7);justify-content:center;align-items:center}
+    .modal-content{background:var(--panel);padding:2rem;border-radius:10px;text-align:center;max-width:400px;color:var(--ink)}
+    .modal-content h2{margin-bottom:1rem}
     /* Locked Pro Buttons */
-    .pro-only {
-      opacity: 0.6;
-      cursor: not-allowed;
-      position: relative;
-    }
-    .pro-only::after {
-      content: "🔒 Pro";
-      position: absolute;
-      top: 50%; left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 0.8rem;
-      font-weight: bold;
-      color: var(--muted);
-      pointer-events: none;
-    }
+    .pro-only{opacity:.6;cursor:not-allowed;position:relative}
+    .pro-only::after{content:"🔒 Pro";position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);font-size:.8rem;font-weight:700;color:var(--muted);pointer-events:none}
   </style>
 </head>
 
@@ -68,7 +39,7 @@
   <header class="site-header">
     <div class="container">
       <a href="/" class="brand-wrap" aria-label="System & Flow homepage">
-        <img src="assets/img/logo.png" alt="System & Flow logo" />
+        <img src="/assets/img/logo.png" alt="System & Flow logo" />
         <span class="brand">System & Flow</span>
       </a>
       <nav>
@@ -142,7 +113,7 @@
   <footer class="footer-min">
     <div class="container footer-container">
       <div class="foot-left">
-        <img class="logo-icon" src="assets/img/logo.png" alt="System & Flow logo icon" />
+        <img class="logo-icon" src="/assets/img/logo.png" alt="System & Flow logo icon" />
         <span class="brand">System & Flow</span>
         <span class="divider">•</span>
         <span class="tagline">Smarter tools. Faster PMs.</span>
@@ -173,7 +144,7 @@
       });
     });
     closeModal.addEventListener("click", () => { modal.style.display = "none"; });
-    window.onclick = (e) => { if (e.target == modal) modal.style.display = "none"; };
+    window.onclick = (e) => { if (e.target === modal) modal.style.display = "none"; };
   </script>
 </body>
 </html>
