--- a/thank-you-pro.html
+++ b/thank-you-pro.html
@@ -4,32 +4,25 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Thank You — Pro Access | System & Flow</title>
-  <meta name="description" content="Thank you for upgrading to Pro! Access Ronnie’s RAID Extractor Pro now." />
+  <meta name="description" content="Thank you for upgrading to Ronnie’s RAID Extractor Pro. Start using Pro features now." />
   <meta name="theme-color" content="#0b1220" />
-  <meta name="robots" content="noindex,follow" />
-
-  <!-- Social -->
-  <meta property="og:title" content="Thank You — Pro Access | System & Flow" />
-  <meta property="og:description" content="You now have Pro access to Ronnie’s RAID Extractor." />
-  <meta property="og:image" content="https://systemnflow.com/assets/img/snf_logo.png" />
-  <meta name="twitter:card" content="summary_large_image" />
 
   <!-- Favicons -->
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16x16.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/img/apple-touch-icon.png" />
-  <link rel="manifest" href="assets/img/site.webmanifest" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png" />
+  <link rel="manifest" href="/assets/img/site.webmanifest" />
 
   <!-- Styles -->
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 
 <body>
-  <!-- Header -->
+  <!-- 🔹 Header -->
   <header class="site-header">
     <div class="container">
       <a href="/" class="brand-wrap" aria-label="System & Flow homepage">
-        <img src="assets/img/logo.png" alt="System & Flow logo" />
+        <img src="/assets/img/logo.png" alt="System & Flow logo" />
         <span class="brand">System & Flow</span>
       </a>
       <nav>
@@ -42,29 +35,29 @@
     </div>
   </header>
 
-  <!-- Main -->
-  <main class="container" style="max-width: 800px; margin: 4rem auto; text-align: center;">
+  <!-- 🔹 Main Content -->
+  <main class="container" style="max-width: 700px; margin: 5rem auto; padding: 2rem; text-align: center;">
     <h1>🎉 Thank You for Upgrading to Pro!</h1>
-    <p style="color: var(--muted); margin: 1rem 0 2rem;">
-      Your payment was successful. You now have full access to <strong>Ronnie’s RAID Extractor Pro</strong>.  
-      Get started below:
+    <p style="color: var(--muted); margin: 1.5rem 0;">
+      Your payment was successful. You now have full access to <strong>Ronnie’s RAID Extractor Pro</strong>.
     </p>
 
-    <a href="/raid.html" class="button primary" style="font-size:1.1rem; padding:0.75rem 1.5rem;">
+    <!-- 🔗 Launch Pro -->
+    <a href="/raid-pro/" class="button primary" style="margin: 1.5rem 0; display: inline-block;">
       🚀 Launch Ronnie’s RAID Extractor Pro
     </a>
 
-    <div style="margin-top:2.5rem; color:var(--muted); font-size:0.95rem;">
-      <p>We’ve also sent a confirmation email with this link, so you can return anytime.</p>
-      <p>Need help? <a href="/contact.html">Contact our team</a>.</p>
-    </div>
+    <p style="color: var(--muted); margin-top: 2rem;">
+      We’ve also sent a confirmation email with this link, so you can return anytime.<br/>
+      Need help? <a href="/contact.html">Contact our team</a>.
+    </p>
   </main>
 
-  <!-- Footer -->
+  <!-- 🔹 Footer -->
   <footer class="footer-min">
     <div class="container footer-container">
       <div class="foot-left">
-        <img class="logo-icon" src="assets/img/logo.png" alt="System & Flow logo icon" />
+        <img class="logo-icon" src="/assets/img/logo.png" alt="System & Flow logo icon" />
         <span class="brand">System & Flow</span>
         <span class="divider">•</span>
         <span class="tagline">Smarter tools. Faster PMs.</span>
@@ -78,9 +71,7 @@
         <a href="https://www.facebook.com/systemnflow" target="_blank" rel="noopener">Facebook</a>
       </div>
     </div>
-    <div class="legal">
-      © <span id="y"></span> System & Flow™. All rights reserved.
-    </div>
+    <div class="legal">© <span id="y"></span> System & Flow™. All rights reserved.</div>
   </footer>
 
   <script>
