--- a/raid-pro/index.html
+++ b/raid-pro/index.html
@@ -42,46 +42,67 @@
     </div>
   </header>
 
-  <!-- 🔹 Main -->
+  <!-- 🔹 License Gate -->
   <main class="container" style="max-width: 900px; margin: 4rem auto; padding: 2rem;">
-    <h1 style="text-align:center;">Ronnie’s RAID Extractor™ Pro</h1>
-    <p style="text-align:center; color: var(--muted); margin-bottom: 2rem;">
-      Welcome to the <strong>Pro edition</strong> — enjoy full access including 
-      <strong>Save RAID history</strong>, <strong>Excel/PDF export</strong>, and more.
-    </p>
-
-    <!-- Confidence Score -->
-    <div id="confidence" style="text-align:center; margin-bottom:1rem; font-size:0.95rem; color:var(--muted);">
-      Ronnie’s Confidence Score: <span style="color:var(--accent); font-weight:600;">100% (Pro Mode)</span>
+    <div id="license-gate" style="text-align:center;">
+      <h1>🔒 Enter License Key</h1>
+      <p style="color:var(--muted);">Please enter your Pro license key to unlock Ronnie’s RAID Extractor™ Pro.</p>
+      <input id="licenseKey" type="text" placeholder="Enter your license key..." style="width:100%; padding:1rem; margin:1rem 0; border-radius:8px; border:1px solid var(--border); background:var(--panel); color:var(--ink);" />
+      <button id="verifyLicense" class="button primary">Verify License</button>
+      <div id="licenseError" style="color:red; margin-top:1rem; display:none;">❌ Invalid license key.</div>
     </div>
 
-    <!-- Textarea -->
-    <textarea id="input" rows="12" placeholder="Paste transcript..."
-      style="width:100%; padding:1rem; border-radius:10px; border:1px solid var(--border); background:var(--panel); color:var(--ink);"></textarea>
+    <!-- 🔹 Pro Content (hidden until verified) -->
+    <div id="proContent" style="display:none;">
+      <h1 style="text-align:center;">Ronnie’s RAID Extractor™ Pro</h1>
+      <p style="text-align:center; color: var(--muted); margin-bottom: 2rem;">
+        Welcome to the <strong>Pro edition</strong> — enjoy full access including 
+        <strong>Save RAID history</strong>, <strong>Excel/PDF export</strong>, and more.
+      </p>
 
-    <!-- File Upload -->
-    <div style="margin:1rem 0;">
-      <label for="fileInput" style="display:block; margin-bottom:0.5rem; color:var(--muted); font-size:0.9rem;">
-        Or upload a transcript (.txt, .docx, .pdf)
-      </label>
-      <input type="file" id="fileInput" accept=".txt,.docx,.pdf" style="color:var(--ink);" />
-    </div>
+      <!-- Confidence Score -->
+      <div id="confidence" style="text-align:center; margin-bottom:1rem; font-size:0.95rem; color:var(--muted);">
+        Ronnie’s Confidence Score: <span style="color:var(--accent); font-weight:600;">100% (Pro Mode)</span>
+      </div>
 
-    <!-- Buttons -->
-    <div style="margin-top:1.5rem; display:flex; gap:1rem; flex-wrap:wrap;">
-      <button id="run" class="button primary">Extract RAID</button>
-      <button id="download" class="button ghost">Download CSV</button>
-      <button id="downloadExcel" class="button ghost">Download Excel</button>
-      <button id="downloadPDF" class="button ghost">Download PDF</button>
-      <button id="copy" class="button ghost">Copy to Clipboard</button>
-      <button id="save" class="button ghost">Save RAID Log</button>
-    </div>
+      <!-- Textarea -->
+      <textarea id="input" rows="12" placeholder="Paste transcript..."
+        style="width:100%; padding:1rem; border-radius:10px; border:1px solid var(--border); background:var(--panel); color:var(--ink);"></textarea>
 
-    <div id="output" style="margin-top:2rem;"></div>
+      <!-- File Upload -->
+      <div style="margin:1rem 0;">
+        <label for="fileInput" style="display:block; margin-bottom:0.5rem; color:var(--muted); font-size:0.9rem;">
+          Or upload a transcript (.txt, .docx, .pdf)
+        </label>
+        <input type="file" id="fileInput" accept=".txt,.docx,.pdf" style="color:var(--ink);" />
+      </div>
 
-    <!-- Pro Status Banner -->
-    <div id="pro-banner" style="margin-top:2rem; text-align:center; padding:1rem; border:1px solid var(--accent); border-radius:8px; background:var(--panel); color:var(--accent);">
-      🎉 You are using the <strong>Pro version</strong> — all features unlocked.
+      <!-- Buttons -->
+      <div style="margin-top:1.5rem; display:flex; gap:1rem; flex-wrap:wrap;">
+        <button id="run" class="button primary">Extract RAID</button>
+        <button id="download" class="button ghost">Download CSV</button>
+        <button id="downloadExcel" class="button ghost">Download Excel</button>
+        <button id="downloadPDF" class="button ghost">Download PDF</button>
+        <button id="copy" class="button ghost">Copy to Clipboard</button>
+        <button id="save" class="button ghost">Save RAID Log</button>
+      </div>
+
+      <div id="output" style="margin-top:2rem;"></div>
+
+      <!-- Pro Status Banner -->
+      <div id="pro-banner" style="margin-top:2rem; text-align:center; padding:1rem; border:1px solid var(--accent); border-radius:8px; background:var(--panel); color:var(--accent);">
+        🎉 You are using the <strong>Pro version</strong> — all features unlocked.
+      </div>
+
+      <!-- Coming Soon -->
+      <div style="margin-top:3rem;">
+        <h2 style="text-align:center;">🚀 Coming Soon for Pro Users</h2>
+        <ul style="color:var(--muted); line-height:1.8;">
+          <li>📊 <strong>RAID Analytics Dashboard</strong> — view trends across all saved logs.</li>
+          <li>🤝 <strong>Team Sharing</strong> — collaborate with teammates on RAID history.</li>
+          <li>🧠 <strong>AI Summary Generator</strong> — instant executive summaries of meeting logs.</li>
+        </ul>
+      </div>
     </div>
   </main>
 
@@ -110,8 +131,34 @@
   <script>
     document.getElementById("y").textContent = new Date().getFullYear();
 
-    // Here you'd wire up the Save RAID feature, Excel/PDF exports, etc.
-    // Since this is the Pro page, nothing is locked.
+    // 🔐 License key check (simplified)
+    document.getElementById("verifyLicense").addEventListener("click", () => {
+      const key = document.getElementById("licenseKey").value.trim();
+
+      // TODO: Replace with LemonSqueezy API call
+      if(key === "DEMO-PRO-KEY-123"){  
+        localStorage.setItem("proUser", "true");
+        document.getElementById("license-gate").style.display = "none";
+        document.getElementById("proContent").style.display = "block";
+      } else {
+        document.getElementById("licenseError").style.display = "block";
+      }
+    });
+
+    // Auto-unlock if verified before
+    if(localStorage.getItem("proUser") === "true"){
+      document.getElementById("license-gate").style.display = "none";
+      document.getElementById("proContent").style.display = "block";
+    }
+
+    // 💾 Save RAID Log to localStorage
+    document.getElementById("save").addEventListener("click", () => {
+      const content = document.getElementById("output").innerText;
+      let logs = JSON.parse(localStorage.getItem("raidLogs") || "[]");
+      logs.push({ date: new Date().toISOString(), content });
+      localStorage.setItem("raidLogs", JSON.stringify(logs));
+      alert("RAID log saved locally!");
+    });
   </script>
 </body>
 </html>
