--- a/raid-pro/index.html
+++ b/raid-pro/index.html
@@ -50,7 +50,7 @@
       <input id="licenseKey" type="text" placeholder="Enter your license key..." 
         style="width:100%; padding:1rem; margin:1rem 0; border-radius:8px; border:1px solid var(--border); background:var(--panel); color:var(--ink);" />
       <button id="verifyLicense" class="button primary">Verify License</button>
-      <div id="licenseError" style="color:red; margin-top:1rem; display:none;">❌ Invalid license key.</div>
+      <div id="licenseError" style="color:red; margin-top:1rem; display:none;">❌ Invalid license key or activation limit reached.</div>
     </div>
 
     <!-- 🔹 Pro Content (hidden until verified) -->
